# GridMR

./: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml  terraform.tfstate
cpp/worker/: CMakeLists.txt  map  worker.cc  worker.cc.thrash
cpp/worker/include/gridmr/worker/common/: env.h  fs.h  logger.h  s3.h  sysmetrics.h
cpp/worker/include/gridmr/worker/mapreduce/: mapper.h  reducer.h
cpp/worker/src/: worker_main.cc
cpp/worker/src/common/: env.cc  fs.cc  logger.cc  s3.cc  sysmetrics.cc
cpp/worker/src/mapreduce/: mapper.cc  reducer.cc
deployment/: deploym.tf  terraform.tfstate  terraform.tfstate.1757824588.backup  terraform.tfvars.example
deployment/scripts/: master.sh  worker.sh
infra/: docker-compose.yml
infra/master/: Dockerfile
infra/seeder/: Dockerfile
infra/worker/: Dockerfile
src/main/java/com/gridmr/master/: MasterServer.java  MasterServerX.java.example  Partitioner.java  Partitioner.java.thrash  Scheduler.java  TaskQueue.java  WorkerManager.java
src/main/java/com/gridmr/master/http/: HttpJobServer.java
src/main/java/com/gridmr/master/service/: ControlServiceImpl.java
src/main/java/com/gridmr/master/tasks/: SchedulerState.java
src/main/java/com/gridmr/master/util/: Env.java
src/main/proto/: gridmr.proto
testdata/: input-001.txt  input-002.txt  input.txt  map.cc  reduce.cc
tools/: .example  gridmr_submit.py  hi.pem  submit_job.py
tools/input/: input-001.txt  input-002.txt  input-003.txt  input-004.txt  input-005.txt
tools/results/: result-55fb4109-4ef7-49e6-95c8-d595ca87f839.txt  result-fef19dcb-50d1-4cd2-b780-fa5e9ae27aa7.txt
